[gd_scene load_steps=15 format=3 uid="uid://83kdporfvghl"]

[ext_resource type="PackedScene" uid="uid://b8d8d8d8d8d8" path="res://scenes/Player.tscn" id="1_pbc48"]
[ext_resource type="Script" uid="uid://ce2juxikih7kp" path="res://scripts/Chain.gd" id="2_eqxsl"]
[ext_resource type="Texture2D" uid="uid://exgsmna3ti5q" path="res://assets/IMG_8601.png" id="3_b4j7a"]
[ext_resource type="Texture2D" uid="uid://ecr4mhvvkdo6" path="res://assets/tileset/IMG_8578.png" id="4_eqxsl"]
[ext_resource type="Script" uid="uid://d0srw8y53ymlm" path="res://scripts/Level2.gd" id="6_level2"]
[ext_resource type="Texture2D" uid="uid://5krbjywyv0es" path="res://assets/tileset/IMG_8593.png" id="6_y0kc7"]
[ext_resource type="PackedScene" uid="uid://dhct6lyt8cosj" path="res://scenes/death_area.tscn" id="7_death"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wo48x"]
size = Vector2(634, 359.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y0kc7"]
size = Vector2(78, 2103.9998)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pbc48"]
size = Vector2(179.5, 70.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4j7a"]
atlas = ExtResource("4_eqxsl")
region = Rect2(110, 775, 75, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eqxsl"]
size = Vector2(24.5, 65)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1"]
friction = 0.8

[sub_resource type="RectangleShape2D" id="RectangleShape2D_box"]
size = Vector2(70, 70)

[node name="Level2" type="Node2D"]
script = ExtResource("6_level2")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
offset_left = -96.0
offset_top = -32.0
offset_right = 1824.0
offset_bottom = 1048.0
scale = Vector2(1.1, 1.1)
color = Color(0.76862746, 0.92941177, 1, 1)

[node name="Player1" parent="." instance=ExtResource("1_pbc48")]
position = Vector2(184, 822)

[node name="Player2" parent="." instance=ExtResource("1_pbc48")]
position = Vector2(280, 840)
player_id = 2

[node name="Chain" type="Node2D" parent="."]
script = ExtResource("2_eqxsl")
player1_path = NodePath("../Player1")
player2_path = NodePath("../Player2")

[node name="Platform" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Platform"]
position = Vector2(27, -3)

[node name="Sprite2D" type="Sprite2D" parent="Platform/StaticBody2D"]
position = Vector2(102, 1082)
scale = Vector2(1.8, 1)
texture = ExtResource("3_b4j7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/StaticBody2D"]
position = Vector2(112, 1075)
shape = SubResource("RectangleShape2D_wo48x")

[node name="StaticBody2D2" type="StaticBody2D" parent="Platform"]
position = Vector2(2839, 810)
rotation = 1.5707964

[node name="Sprite2D" type="Sprite2D" parent="Platform/StaticBody2D2"]
position = Vector2(102, 1082)
scale = Vector2(1.8, 1)
texture = ExtResource("3_b4j7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/StaticBody2D2"]
position = Vector2(108.00006, 1075)
shape = SubResource("RectangleShape2D_wo48x")

[node name="StaticBody2D3" type="StaticBody2D" parent="Platform"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/StaticBody2D3"]
position = Vector2(-40, 656.5)
shape = SubResource("RectangleShape2D_y0kc7")

[node name="StaticBody2D4" type="StaticBody2D" parent="Platform"]
position = Vector2(2007, 15)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/StaticBody2D4"]
position = Vector2(-40, 656.5)
shape = SubResource("RectangleShape2D_y0kc7")

[node name="StaticBody2D5" type="StaticBody2D" parent="Platform"]
position = Vector2(1682, 1167)
rotation = 1.5707964

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/StaticBody2D5"]
position = Vector2(9, 674)
shape = SubResource("RectangleShape2D_y0kc7")

[node name="StaticBody2D6" type="StaticBody2D" parent="Platform"]
position = Vector2(1683, -1)
rotation = 1.5707964

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platform/StaticBody2D6"]
position = Vector2(-39.99951, 683.9999)
shape = SubResource("RectangleShape2D_y0kc7")

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(188, 826)

[node name="MovingPlatform" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="MovingPlatform"]
position = Vector2(-120, 112)

[node name="Sprite2D" type="Sprite2D" parent="MovingPlatform/StaticBody2D"]
position = Vector2(706, 811)
scale = Vector2(0.5, 0.2)
texture = ExtResource("3_b4j7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform/StaticBody2D"]
position = Vector2(707.25, 809.75)
shape = SubResource("RectangleShape2D_pbc48")

[node name="StaticBody2D2" type="StaticBody2D" parent="MovingPlatform"]
position = Vector2(64, 112)

[node name="Sprite2D" type="Sprite2D" parent="MovingPlatform/StaticBody2D2"]
position = Vector2(706, 811)
scale = Vector2(0.5, 0.2)
texture = ExtResource("3_b4j7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform/StaticBody2D2"]
position = Vector2(707.25, 809.75)
shape = SubResource("RectangleShape2D_pbc48")

[node name="StaticBody2D3" type="StaticBody2D" parent="MovingPlatform"]
position = Vector2(248, 96)

[node name="Sprite2D" type="Sprite2D" parent="MovingPlatform/StaticBody2D3"]
position = Vector2(706, 811)
scale = Vector2(0.5, 0.2)
texture = ExtResource("3_b4j7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform/StaticBody2D3"]
position = Vector2(707.25, 809.75)
shape = SubResource("RectangleShape2D_pbc48")

[node name="StaticBody2D4" type="StaticBody2D" parent="MovingPlatform"]
position = Vector2(432, 72)

[node name="Sprite2D" type="Sprite2D" parent="MovingPlatform/StaticBody2D4"]
position = Vector2(706, 811)
scale = Vector2(0.5, 0.2)
texture = ExtResource("3_b4j7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform/StaticBody2D4"]
position = Vector2(707.25, 809.75)
shape = SubResource("RectangleShape2D_pbc48")

[node name="StaticBody2D5" type="StaticBody2D" parent="MovingPlatform"]
position = Vector2(616, 48)

[node name="Sprite2D" type="Sprite2D" parent="MovingPlatform/StaticBody2D5"]
position = Vector2(706, 811)
scale = Vector2(0.5, 0.2)
texture = ExtResource("3_b4j7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform/StaticBody2D5"]
position = Vector2(707.25, 809.75)
shape = SubResource("RectangleShape2D_pbc48")

[node name="StaticBody2D6" type="StaticBody2D" parent="MovingPlatform"]
position = Vector2(712, -16)

[node name="Sprite2D" type="Sprite2D" parent="MovingPlatform/StaticBody2D6"]
position = Vector2(706, 811)
scale = Vector2(0.5, 0.2)
texture = ExtResource("3_b4j7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform/StaticBody2D6"]
position = Vector2(707.25, 809.75)
shape = SubResource("RectangleShape2D_pbc48")

[node name="StaticBody2D7" type="StaticBody2D" parent="MovingPlatform"]
position = Vector2(784, -88)

[node name="Sprite2D" type="Sprite2D" parent="MovingPlatform/StaticBody2D7"]
position = Vector2(706, 811)
scale = Vector2(0.5, 0.2)
texture = ExtResource("3_b4j7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform/StaticBody2D7"]
position = Vector2(707.25, 809.75)
shape = SubResource("RectangleShape2D_pbc48")

[node name="StaticBody2D8" type="StaticBody2D" parent="MovingPlatform"]
position = Vector2(864, -160)

[node name="Sprite2D" type="Sprite2D" parent="MovingPlatform/StaticBody2D8"]
position = Vector2(706, 811)
scale = Vector2(0.5, 0.2)
texture = ExtResource("3_b4j7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovingPlatform/StaticBody2D8"]
position = Vector2(707.25, 809.75)
shape = SubResource("RectangleShape2D_pbc48")

[node name="Button" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Button"]

[node name="Sprite2D" type="Sprite2D" parent="Button/Area2D"]
position = Vector2(56, 864)
texture = SubResource("AtlasTexture_b4j7a")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Button/Area2D"]
position = Vector2(56, 864)
shape = SubResource("RectangleShape2D_eqxsl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Button/Area2D"]

[node name="Box" type="RigidBody2D" parent="."]
position = Vector2(368, 840)
mass = 2.0
physics_material_override = SubResource("PhysicsMaterial_1")
freeze_mode = 1

[node name="Sprite2D" type="Sprite2D" parent="Box"]
position = Vector2(198, -146)
scale = Vector2(0.47, 0.47)
texture = ExtResource("6_y0kc7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Box"]
position = Vector2(0, -3)
scale = Vector2(0.8, 0.8)
shape = SubResource("RectangleShape2D_box")

[node name="WarningLabel" type="Label" parent="."]
offset_left = 700.0
offset_top = 200.0
offset_right = 1200.0
offset_bottom = 300.0
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1

[node name="DeathArea" parent="." instance=ExtResource("7_death")]
position = Vector2(-32, 1200)

[connection signal="body_entered" from="DeathArea" to="." method="_on_death_area_body_entered"]
